# ezlangsharp

./: Cargo.toml  ErrIDs.md  README.md  syntax.ezs  test.ezs  test.slg
src/: ast.rs  grammar.lalrpop  lib.rs  main.rs
src/semantic_analysis/: basic_checks.rs  mod.rs  typechecking.rs
