[package]
name = "ezlangsharp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
codespan-reporting = "0.11.1"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1.5.4"
